# fsync-rs

./: .travis.yml  Cargo.toml  LICENSE  README.md
ci/: install.sh  script.sh
src/: errors.rs  lib.rs  main.rs  utils.rs
